--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -55,6 +55,9 @@ code {
 .lg {
   font-size: 28pt;
 }
+.md {
+  font-size: 22pt;
+}
 .center {
   text-align: center;
 }
@@ -84,23 +87,19 @@ code {
 .badge-row a {
   text-decoration: none;
 }
-.sub-circle-text {
-  text-align: center;
-  display: block;
-  padding: 15px 0 15px 0;
-  font-family: 'Tangerine', cursive;
-  color: #000000;
-  font-size: 22pt;
-  font-weight: bold;
-}
 .circle-badge-crested-lg {
   text-align: center;
   vertical-align: middle;
-  width: 200px;
-  height: 200px;
+/*  width: 200px;
+  height: 200px;*/
+  width: 100%;
+  height: 100%;
+  line-height: 100%;
+  font-family: 'Tangerine', cursive;
+  font-size: 24pt;
   margin: 5px auto;
   display: block;
-  border-radius: 50%;
+  border-radius: 5px;
   background-image: url(../images/crestedButteBadgeLG.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -109,11 +108,13 @@ code {
 .circle-badge-vancouver-lg {
   text-align: center;
   vertical-align: middle;
-  width: 200px;
-  height: 200px;
+/*  width: 200px;
+  height: 200px;*/
+  width: 100%;
+  height: 100%;
   margin: 5px auto;
   display: block;
-  border-radius: 50%;
+  border-radius: 5px;
   background-image: url(../images/vancouverBadgeLG.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -122,11 +123,13 @@ code {
 .circle-badge-wallowas-lg {
   text-align: center;
   vertical-align: middle;
-  width: 200px;
-  height: 200px;
+/*  width: 200px;
+  height: 200px;*/
+  width: 100%;
+  height: 100%;
   margin: 5px auto;
   display: block;
-  border-radius: 50%;
+  border-radius: 5px;
   background-image: url(../images/wallowasBadgeLG.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -135,15 +138,26 @@ code {
 .circle-badge-adams-lg {
   text-align: center;
   vertical-align: middle;
-  width: 200px;
-  height: 200px;
+/*  width: 200px;
+  height: 200px;*/
+  width: 100%;
+  height: 100%;
   margin: 5px auto;
   display: block;
-  border-radius: 50%;
+  border-radius: 5px;
   background-image: url(../images/adamsBadgeLG.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+}
+.sub-circle-text {
+  text-align: center;
+  padding: 15px 0 15px 0;
+  font-family: 'Tangerine', cursive;
+  color: #000000;
+  font-size: 22pt;
+  font-weight: bold;
+  line-height: 100%;
 }
 .main-fifty {
   display: block;
@@ -151,6 +165,15 @@ code {
   text-align: left;
 }
 #contact {
+}
+#contact-form {
+}
+#contact-thanks {
+  display: none;
+  padding: 20px;
+}
+#hide-small {
+  display: none;
 }
 #contact input[type=text] {
   padding: 5px;
@@ -325,6 +348,9 @@ code {
   .lg {
     font-size: 45pt;
   }
+  .md {
+    font-size: 26pt;
+  }
   .page-header h1 {
     font-size: 22pt;
     margin-top: -15px;
@@ -340,13 +366,36 @@ code {
   .badge-row a {
     text-decoration: none;
   }
+  .circle-badge-crested-lg {
+    width: 33%;
+    max-width: 33%;
+    height: 200px;
+    display: inline-block;
+  }
+  .circle-badge-vancouver-lg {
+    width: 33%;
+    max-width: 33%;
+    height: 200px;
+    display: inline-block;
+  }
+  .circle-badge-wallowas-lg {
+    width: 33%;
+    max-width: 33%;
+    height: 200px;
+    display: inline-block;
+  }
+  .circle-badge-adams-lg {
+    width: 33%;
+    max-width: 33%;
+    height: 200px;
+    display: inline-block;
+  }
   .sub-circle-text {
+    vertical-align: middle;
     display: inline-block;
     font-size: 26pt;
-    font-weight: bold;
-    max-width: 33%;
-    padding: 0 15px 0 15px;
-    background-color: inherit;
+    width: 100%;
+    background-color: rgba(255,255,255,0.4);
     transition: all 0.6s ease;
     -webkit-transition: all 0.6s ease;
   }
@@ -379,6 +428,12 @@ code {
     width: 95%;
     margin: 0px auto;
     text-align: center;
+  }
+  #hide-small {
+    display: block;
+    width: 65%;
+    border-radius: 5px;
+    margin: 10px auto 10px;
   }
   #contact input[type=text] {
     display: inline-block;
