--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -368,27 +368,29 @@ code {
   }
   .circle-badge-crested-lg {
     width: 33%;
-    max-width: 33%;
+    /*max-width: 33%;*/
     height: 200px;
     display: inline-block;
   }
   .circle-badge-vancouver-lg {
     width: 33%;
-    max-width: 33%;
+    /*max-width: 33%;*/
     height: 200px;
     display: inline-block;
   }
   .circle-badge-wallowas-lg {
     width: 33%;
-    max-width: 33%;
+    /*max-width: 33%;*/
     height: 200px;
     display: inline-block;
+    transition: all 0.3s ease;
   }
   .circle-badge-adams-lg {
     width: 33%;
-    max-width: 33%;
+    /*max-width: 33%;*/
     height: 200px;
     display: inline-block;
+    transition: all 0.3s ease;
   }
   .sub-circle-text {
     vertical-align: middle;
@@ -397,7 +399,7 @@ code {
     width: 100%;
     background-color: rgba(255,255,255,0.4);
     transition: all 0.6s ease;
-    -webkit-transition: all 0.6s ease;
+    -webkit-transition: all 0.3s ease;
   }
   .flower {
     background-color: #ffffff;
