--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -83,11 +83,14 @@ code {
 }
 .badge-row {
   margin: 20px 0 20px 0;
+  font-family: 'Tangerine', cursive;
 }
 .badge-row a {
   text-decoration: none;
-  color: inherit;
 }
+/*.badge-row a:hover {
+  color: inherit;
+}*/
 .circle-badge-crested-lg {
   text-align: center;
   vertical-align: middle;
@@ -96,16 +99,17 @@ code {
   width: 100%;
   height: 100%;
   line-height: 100%;
-  font-family: 'Tangerine', cursive;
   font-size: 22pt;
   margin: 5px auto;
   display: block;
-  font-weight: bold;
   padding: 15px 0 15px 0;
   background-color: #423542;
   color: #ffffff;
 }
-.circle-badge-vancouver-lg {
+.circle-badge-crested-lg:hover {
+  color: #ffffff;
+}
+.circle-badge-timberline-lg {
   text-align: center;
   vertical-align: middle;
 /*  width: 200px;
@@ -113,12 +117,15 @@ code {
   width: 100%;
   height: 100%;
   line-height: 100%;
-  font-family: 'Tangerine', cursive;
   font-size: 22pt;
   margin: 5px auto;
-  font-weight: bold;
+  background-color: #826882;
+  color: #cccccc;
   padding: 15px 0 15px 0;
   display: block;
+}
+.circle-badge-timberline-lg:hover {
+  color: #cccccc;
 }
 .circle-badge-wallowas-lg {
   text-align: center;
@@ -128,13 +135,14 @@ code {
   width: 100%;
   height: 100%;
   line-height: 100%;
-  font-family: 'Tangerine', cursive;
   font-size: 22pt;
   margin: 5px auto;
   display: block;
-  font-weight: bold;
   padding: 15px 0 15px 0;
   background-color: #CFBACE;
+  color: #000000;
+}
+.circle-badge-wallowas-lg:hover {
   color: #000000;
 }
 .circle-badge-adams-lg {
@@ -145,11 +153,9 @@ code {
   width: 100%;
   height: 100%;
   line-height: 100%;
-  font-family: 'Tangerine', cursive;
   font-size: 22pt;
   margin: 5px auto;
   display: block;
-  font-weight: bold;
   color: #cccccc;
   padding: 15px 0 15px 0;
   background-color: #826882;
@@ -489,6 +495,9 @@ and (max-device-width : 600px) {
     font-size: 14pt;
     padding: 3px;
   }
+  .navbar-brand {
+    font-size: 18pt;
+  }
 }
 #backToTop {
   display: none;
@@ -519,61 +528,87 @@ and (max-device-width : 600px) {
   .badge-row {
     width: 100%;
     min-width: 100%;
+    font-family: 'Lora', serif;
   }
   .badge-row a {
     text-decoration: none;
+    color: #000000;
   }
   .circle-badge-crested-lg {
-    width: 33%;
+    width: 300px;
     height: 225px;
     font-size: 28pt;
     line-height: 100%;
+    color: #000000;
     display: inline-block;
-    background-image: url(../images/crestedButteBadgeLG.jpg);
+    background-image: url(../images/crestedbutteHome.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
+    text-shadow: 0 0 2px #ffffff;
     transition: all 0.3s ease;
   }
-  .circle-badge-vancouver-lg {
-    width: 33%;
+  .circle-badge-crested-lg:hover {
+    font-size: 34pt;
+    color: #ffffff;
+    text-shadow: 0 0 2px #000000;
+  }
+  .circle-badge-timberline-lg {
+    width: 300px;
     height: 225px;
     font-size: 28pt;
     line-height: 100%;
+    color: #000000;
     display: inline-block;
-    background-image: url(../images/vancouverBadgeLG.jpg);
+    background-image: url(../images/timberlineHome.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    text-shadow: 0 0 2px #ffffff;
     transition: all 0.3s ease;
+  }
+  .circle-badge-timberline-lg:hover {
+    font-size: 34pt;
+    color: #ffffff;
+    text-shadow: 0 0 2px #000000;
   }
   .circle-badge-wallowas-lg {
-    width: 33%;
-    /*max-width: 33%;*/
+    width: 300px;
     height: 225px;
     font-size: 28pt;
     line-height: 100%;
-    padding: 0 0.5% 0 0.5%;
     display: inline-block;
-    background-image: url(../images/wallowasBadgeLG.jpg);
+    background-image: url(../images/wallowas01Home.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    color: #ffffff;
+    color: #000000;
     background-position: center center;
+    text-shadow: 0 0 2px #ffffff;
     transition: all 0.3s ease;
+  }
+  .circle-badge-wallowas-lg:hover {
+    font-size: 34pt;
+    color: #ffffff;
+    text-shadow: 0 0 4px #000000;
   }
   .circle-badge-adams-lg {
     width: 33%;
-    /*max-width: 33%;*/
     height: 225px;
     font-size: 28pt;
     line-height: 100%;
+    color: #000000;
     display: inline-block;
     background-image: url(../images/adamsBadgeLG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    text-shadow: 0 0 2px #ffffff;
     transition: all 0.3s ease;
+  }
+  .circle-badge-adams-lg:hover {
+    font-size: 34pt;
+    color: #ffffff;
+    text-shadow: 0 0 2px #000000;
   }
   .sub-circle-text {
     vertical-align: middle;
