--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -482,6 +482,8 @@ code {
   background-attachment: fixed;
   box-shadow: inset 0 0 1em #111;
 }
+
+/*Eliminate parallax scrolling on mobile (doesn't really work)*/
 @media only screen
 and (min-device-width : 300px)
 and (max-device-width : 600px) {
@@ -499,10 +501,27 @@ and (max-device-width : 600px) {
     font-size: 18pt;
   }
 }
+@media only screen
+and (min-device-width : 601px)
+and (max-device-width : 1024px) {
+  .timberline, .wallowas, .wallowas-summit, .mtadams, .shadow, .pcg, .maine-lobster, .vancouver, .crested-butte, .trail-falls, .pacific-city {
+    height: 500px;
+    background-size: cover;
+    background-attachment: scroll;
+  }
+  .parallax-caption {
+    background-color: rgba(255,255,255,0.8);
+    padding: 3px;
+  }
+  .navbar-brand {
+    font-size: 18pt;
+  }
+}
 #backToTop {
   display: none;
 }
 
+/*Full size- laptops/desktops*/
 @media (min-width: 768px) {
   .nav-right {
     float: right;
@@ -535,9 +554,9 @@ and (max-device-width : 600px) {
     color: #000000;
   }
   .circle-badge-crested-lg {
-    width: 300px;
+    width: 30%;
     height: 225px;
-    font-size: 28pt;
+    font-size: 22pt;
     line-height: 100%;
     color: #000000;
     display: inline-block;
@@ -549,14 +568,14 @@ and (max-device-width : 600px) {
     transition: all 0.3s ease;
   }
   .circle-badge-crested-lg:hover {
-    font-size: 34pt;
+    font-size: 32pt;
     color: #ffffff;
     text-shadow: 0 0 2px #000000;
   }
   .circle-badge-timberline-lg {
-    width: 300px;
+    width: 30%;
     height: 225px;
-    font-size: 28pt;
+    font-size: 22pt;
     line-height: 100%;
     color: #000000;
     display: inline-block;
@@ -568,14 +587,14 @@ and (max-device-width : 600px) {
     transition: all 0.3s ease;
   }
   .circle-badge-timberline-lg:hover {
-    font-size: 34pt;
+    font-size: 32pt;
     color: #ffffff;
     text-shadow: 0 0 2px #000000;
   }
   .circle-badge-wallowas-lg {
-    width: 300px;
+    width: 30%;
     height: 225px;
-    font-size: 28pt;
+    font-size: 22pt;
     line-height: 100%;
     display: inline-block;
     background-image: url(../images/wallowas01Home.jpg);
@@ -587,14 +606,14 @@ and (max-device-width : 600px) {
     transition: all 0.3s ease;
   }
   .circle-badge-wallowas-lg:hover {
-    font-size: 34pt;
+    font-size: 32pt;
     color: #ffffff;
-    text-shadow: 0 0 4px #000000;
+    text-shadow: 0 0 2px #000000;
   }
   .circle-badge-adams-lg {
     width: 33%;
     height: 225px;
-    font-size: 28pt;
+    font-size: 22pt;
     line-height: 100%;
     color: #000000;
     display: inline-block;
@@ -606,7 +625,7 @@ and (max-device-width : 600px) {
     transition: all 0.3s ease;
   }
   .circle-badge-adams-lg:hover {
-    font-size: 34pt;
+    font-size: 32pt;
     color: #ffffff;
     text-shadow: 0 0 2px #000000;
   }
