--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -482,12 +482,34 @@ code {
   background-attachment: fixed;
   box-shadow: inset 0 0 1em #111;
 }
+.cascade-sunset {
+  width: 100%;
+  height: 100vh;
+  background-color: #cccccc;
+  background-image: url(../images/parallax/cascadesunsetMobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  box-shadow: inset 0 0 1em #111;
+}
+.ashinatree {
+  width: 100%;
+  height: 100vh;
+  background-color: #cccccc;
+  background-image: url(../images/parallax/ashinatreeMobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  box-shadow: inset 0 0 1em #111;
+}
 
 /*Eliminate parallax scrolling on mobile (doesn't really work)*/
 @media only screen
 and (min-device-width : 300px)
 and (max-device-width : 600px) {
-  .timberline, .wallowas, .wallowas-summit, .mtadams, .shadow, .pcg, .maine-lobster, .vancouver, .crested-butte, .trail-falls, .pacific-city {
+  .timberline, .wallowas, .wallowas-summit, .mtadams, .shadow, .pcg, .maine-lobster, .vancouver, .crested-butte, .trail-falls, .pacific-city, .cascade-sunset, .ashinatree {
     height: 350px;
     background-size: cover;
     background-attachment: scroll;
@@ -504,7 +526,7 @@ and (max-device-width : 600px) {
 @media only screen
 and (min-device-width : 601px)
 and (max-device-width : 1024px) {
-  .timberline, .wallowas, .wallowas-summit, .mtadams, .shadow, .pcg, .maine-lobster, .vancouver, .crested-butte, .trail-falls, .pacific-city {
+  .timberline, .wallowas, .wallowas-summit, .mtadams, .shadow, .pcg, .maine-lobster, .vancouver, .crested-butte, .trail-falls, .pacific-city, .cascade-sunset, .ashinatree {
     height: 500px;
     background-size: cover;
     background-attachment: scroll;
@@ -836,6 +858,14 @@ and (max-device-width : 1024px) {
   }
   .pacific-city {
     background-image: url(../images/parallax/pacificcity.jpg);
+    background-size: contain;
+  }
+  .cascade-sunset {
+    background-image: url(../images/parallax/cascadesunset.jpg);
+    background-size: contain;
+  }
+  .ashinatree {
+    background-image: url(../images/parallax/ashinatree.jpg);
     background-size: contain;
   }
   #backToTop {
