Added latest news section

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4253,11 +4253,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-nav > li {
     float: left;
     background-color: inherit;
-    transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.3s ease;
   }
   .navbar-nav > li:hover {
-    background-color: #C9D787;
+    background-color: #FFCDFF;
     cursor: pointer;
   }
   .navbar-nav > li > a {
@@ -4409,7 +4409,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #000000;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
@@ -4419,8 +4419,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #555;
-  background-color: #e7e7e7;
+  color: #ffffff;
+  background-color: #403340;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
